Import of LETO/Math-MatrixReal-1.4 from CPAN.
gitpan-cpan-distribution: Math-MatrixReal
gitpan-cpan-version:      1.4
gitpan-cpan-path:         LETO/Math-MatrixReal-1.4.tar.gz
gitpan-cpan-author:       LETO
gitpan-cpan-maturity:     released

--- a/Kleene.pod
+++ b/Kleene.pod
@@ -269,7 +269,7 @@ Dijkstra's algorithm for shortest paths.
 =head1 AUTHOR
 
 This document is based on lecture notes and has been put into
-POD format by Steffen Beyer <sb@sdm.de>.
+POD format by Steffen Beyer <sb@engelschall.com>.
 
 =head1 COPYRIGHT
 
