--- a/README
+++ b/README
@@ -1,8 +1,5 @@
-=========================================
-  Package "Math-MatrixReal" Version 1.3
-=========================================
-    for Perl version 5.000 and higher
-
+Math::MatrixReal v1.4
+http://leto.net/code/Math-MatrixReal/
 
 Contents of this file:
 ----------------------
@@ -22,7 +19,8 @@ Legal stuff:
 
 Copyright (c) 1996, 1997 by Steffen Beyer.
               1999 by Rodolphe Ortalo.
- All rights reserved.
+	      2001 by Jonathan Leto.
+All rights reserved.
 This package is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 
@@ -72,7 +70,7 @@ Edit the "Makefile.PL" file in this package and change the line
 
 to
 
-    'VERSION'		=> '1.3',
+    'VERSION'		=> '1.5',
 
 
 How to install it:
@@ -115,6 +113,8 @@ Version 1.3 included the eigenvalues/eigenvectors computation methods,
 added by Rodolphe Ortalo. Some test/bench programs were added also,
 especially for these methods.
 
+Please see the CHANGES file for newer version history.
+
 Credits:
 --------
 
@@ -131,11 +131,16 @@ additions. (Of course, this acknowledgment is due to Rodolphe. :-)
 Final note:
 -----------
 
+Please send all comments/bugs/patches to Jonathan Leto <jonathan@leto.net>,
+as I have taken over module maintainer-ship as of version 1.4.
+
+Original Final note:
+
 If you need any assistance or have any comments, problems, suggestions,
 findings, complaints, questions, insights, compliments or donations to give ;-)
 then please don't hesitate to send me a mail:
 
-sb@sdm.de (Steffen Beyer)
+sb@engelschall.com (Steffen Beyer)
 
 You can also contact me if you think it's relevant (e.g. especially
 for compliments or donations ;-)):
@@ -155,8 +160,3 @@ all be done with it and in which direction it should be developed further.
 
 Many thanks in advance!!
 
-With kind regards,
---
-    |s  |d &|m  |    Steffen Beyer <sb@sdm.de> (+49 89) 63812-244 fax -150
-    |   |   |   |    software design & management GmbH & Co. KG
-    |   |   |   |    Thomas-Dehler-Str. 27, 81737 Munich, Germany.
