--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,18 @@
+Changes in v1.6 -- leto
+Sat Feb 16 09:46:51 EST 2002 
+-------------------------
+	* is_skew_symmetric() function added
+	* fixed logic error is sym_eigenvalues ( didn't notice if not square! )
+	* spectral_radius() function added
+	* is_binary() function added
+	* is_LR() function added
+	* t/spectral.t created
+	* t/binary.t created
+	* t/is_LR.t created
+	* t/gramian.t created
+	* is_skew_symmetric() tests added to t/symmetric.t
+	* is_gramian() function added
+
 Changes in v1.5 -- leto
 Sat Jan 12 04:20:48 EST 2002 
 -------------------------
