--- a/TODO
+++ b/TODO
@@ -16,7 +16,9 @@ DONE:print as matlab
 DONE:make each,each_diag 1-based for consistency SOON
 t/basic.t should check results
 alphabetize section of docs
-$matrix->set_option( expand_on_assign => 1, format => "%s" );
+
+$matrix->set_option( expand_on_assign => 1 );
+Pade' matrix exponential
 
  * Steffen Beyer ideas:
 
