Import of LETO/Math-MatrixReal-1.10 from CPAN.
gitpan-cpan-distribution: Math-MatrixReal
gitpan-cpan-version:      1.10
gitpan-cpan-path:         LETO/Math-MatrixReal-1.10.tar.gz
gitpan-cpan-author:       LETO
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+Changes in v1.10 - msouth
+Sat Aug 13 20:49:44 EDT 2005
+----------------------------
+    * Integration of Math::MatrixReal::Ext1 0.06
+        * merged new_from_cols and new_from_rows into one private
+          function which is called by wrappers with the old
+          names
+        * added tests to exercise all of the known failure modes
+          in new_from_{rows,cols} calls
+    * removed tabs from POD
+
 Changes in v1.9 - leto
 Wed May 15 03:19:34 EST 2002 
 ----------------------------
