--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Math::MatrixReal v1.9
+Math::MatrixReal v1.10
 http://leto.net/code/Math-MatrixReal/
 
 Contents of this file:
@@ -17,9 +17,7 @@ Contents of this file:
 Legal stuff:
 ------------
 
-Copyright (c) 1996, 1997 by Steffen Beyer.
-              1999 by Rodolphe Ortalo.
-	      2001-2002 by Jonathan Leto.
+Copyright (c) by Steffen Beyer, Rodolphe Ortalo, Jonathan Leto, Mike South
 All rights reserved.
 This package is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
