Import of LETO/Math-MatrixReal-1.11 from CPAN.
gitpan-cpan-distribution: Math-MatrixReal
gitpan-cpan-version:      1.11
gitpan-cpan-path:         LETO/Math-MatrixReal-1.11.tar.gz
gitpan-cpan-author:       LETO
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes in v.11 - leto
+Fri Aug 19 00:01:04 EST 2005 
+----------------------------
+	* now a valid CPAN tarball
+
 Changes in v1.10 - msouth
 Sat Aug 13 20:49:44 EDT 2005
 ----------------------------
