--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,23 @@
+Changes in v2.08 - Jonathan "Duke" Leto
+April 11 2011
+---------------------------
+    * Fix t/matlab.t failing on Windows (RT #64629)
+    * Applied patch from RT #51669 (POD rendering)
+    * Applied patch from RT #61334 (fix croak in new_from_string)
+    * Make reference check less strict in _new_from_row_or_cols (requested by MJD)
+
+Changes in v2.06 - leto 
+Sun Apr 13 19:57:25 EDT 2008 
+----------------------------
+    * added submatrix() (exactly the same behavior as sec() from PDL, for 2-D matrices )
+        Backstory: I was reading through "Mastering Algorithms with Perl" and
+        it says that it is not possible to do this in Math::MatrixReal without 
+        iterating through all the elements of the matrix.  Now it is wrong.
+    * t/submatrix.t created
+    * t/decompose_LR.t created
+    * !!!NEED documentation for submatrix()
+
+
 Changes in v2.05 - leto 
 Fri Feb 29 21:58:47 EST 2008 
 ----------------------------
