Import of LETO/Math-MatrixReal-2.10 from CPAN.
gitpan-cpan-distribution: Math-MatrixReal
gitpan-cpan-version:      2.10
gitpan-cpan-path:         LETO/Math-MatrixReal-2.10.tar.gz
gitpan-cpan-author:       LETO
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes in v2.10 - Jonathan "Duke" Leto
+November 2013
+--------------------------
+    * Fix tests on Windows, thanks to Russell Jenkins <veryrusty@gmail.com>
+
 Changes in v2.09 - Jonathan "Duke" Leto
 November 2011
 --------------------------
