--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes in v2.11 - Jonathan "Duke" Leto
+January 2014
+--------------------------
+    * Add maximum/minimum functions. (Alberto Simões)
+    * Add reshape constructor. (Alberto Simões)
+
 Changes in v2.10 - Jonathan "Duke" Leto
 November 2013
 --------------------------
