Import of LETO/Math-MatrixReal-2.12.tar.gz from CPAN.
gitpan-cpan-distribution: Math-MatrixReal
gitpan-cpan-version:      2.12
gitpan-cpan-path:         LETO/Math-MatrixReal-2.12.tar.gz
gitpan-cpan-author:       LETO
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes in v2.12 - Jonathan "Duke" Leto
+December 2014
+--------------------------
+    * Added as_list() function. (Ivan Baidakou (basiliscos))
+
 Changes in v2.11 - Jonathan "Duke" Leto
 January 2014
 --------------------------
